// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`await-using-with-type-declaration.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    await     using    foo: Foo   = new Foo();
}

=====================================output=====================================
{
  await using foo: Foo = new Foo();
}

================================================================================
`;

exports[`using-with-type-declaration.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{
    using     foo: Foo =    new Foo();
}

=====================================output=====================================
{
  using foo: Foo = new Foo();
}

================================================================================
`;
